--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "request": "^2.81.0",
     "superagent": "^3.5.2"
   },
+  "bin": {
+    "spider": "node index.js"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
